discussion/kv_engine/150168/150168_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

DCPTest::destroy_dcp_stream() check DcpProducer::closeStream()'s status

Change-Id: Id5051d4c175e5c5afc8ebf6daad96493112e0ed0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-04-15 15:08:17.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-15 16:09:19.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10261/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30018/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:24:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30018/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34985/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_test.cc(481): error C2660: "DCPTest::destroy_dcp_stream": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34985/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8368/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:24: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
    destroy_dcp_stream(cb::engine_errc::no_such_key);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:282:1: note: "destroy_dcp_stream" declared here
cb::engine_errc DCPTest::destroy_dcp_stream() {
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8368/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:24:
error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17807/ : FAILURE

Compile error at [2021-04-15T16:02:57.545Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:24:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17807/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8959/ : FAILURE

Compile error at [2021-04-15T15:10:23.377Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:24:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8959/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9891/ : FAILURE

Compile error at [2021-04-15T15:57:02.626Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:52:
error: no matching function for call to ?DCPTest_MB34280_Test::destroy_dcp_stream(cb::engine_errc)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9891/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10029/ : FAILURE

Compile error at [2021-04-15T15:59:44.414Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:481:52:
error: no matching function for call to ?DCPTest_MB34280_Test::destroy_dcp_stream(cb::engine_errc)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10029/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6915/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
